--- a/wp-content/themes/salient-child/src/_hero.scss
+++ b/wp-content/themes/salient-child/src/_hero.scss
@@ -9,18 +9,43 @@
     top:-95px;
     padding-top:95px;
     color:$white;
+    padding-top:140px;
+     @include sm-down {
+        h1.title {
+            font-size: 60px;
+            line-height: 1;
+        }
+    }
 }
 .xl {
-    font-size: 45px;
+    font-size: 20px;
     font-weight: 300;
     line-height: 1.2;
+    @include sm {
+        font-size: 30px;
+    }
+    @include lg {
+        font-size: 45px;
+    }
+}
+
+.btm {
+    position: fixed;
+    bottom: 100px;
+    left:40px;
+    @include lg {
+        bottom:0;
+    }
 }
 
 .over-text {
-  
     position: relative;
     left: 0;
     color:$white;
+    padding:0 40px;
+    @media screen and (min-height: 700px) {
+        top:-200px;
+    }
 }
 
 
@@ -65,61 +90,377 @@
 .indent {
     padding-left:80px;
 }
+
+.play {
+    background: url('/wp-content/themes/salient-child/src/img/Play_button.svg');
+    position: absolute;
+    left:-70px;
+    top:-70px;
+    width:130px;
+    height:130px;
+    display:block;
+    opacity: 1;
+    @include transition(.3s);
+}
 .videolightbox {
     position: relative;
+    display: block;
+    .hovwrap {
+        overflow: hidden;
+        position: relative;
+        display: block;
+    }
+    #play { 
+        display: none;
+    }
+    &:hover {
+        #play {
+            background: url('/wp-content/themes/salient-child/src/img/Play_button.svg');
+            position: absolute;
+            width:130px;
+            height:130px;
+            right:0;
+            bottom:0;
+            display:block;
+        }
+        .play {
+            opacity: 0;
+        }
+    }
 
+}
+
+
+
+.about-img {
+    position: absolute;
+    right:0;
+    top:-60px;
+}
+.about-pad {
+    padding-top:80px;
+    padding-bottom:300px;
+}
+
+.h2 {
+    font-size: 75px;
+    letter-spacing: 0;
+    line-height: 95px;
+    color:$white;
+    span {
+        font-size: 15px;
+        letter-spacing: 4.25px;
+        line-height: 18px;
+        color:$yellow;
+        display: block;
+        b {
+            color:$white;
+        }
+    }
+}
+.tab-options {
+    padding:100px 0;
+    text-align: center;
+}
+.factsContainer_sm {
+    display: flex;
+    width: 400vw;
+    height: 100vh;
+     position: relative;
+}
+
+.fact {
+    display: flex;
+    flex-direction: column;
+    // width:460px;
+        &:nth-child(odd) {
+            .place {
+            top:-40px;
+            }
+        }
+        &:nth-child(even) {
+            .place {
+            top:80px;
+            }
+        }
+
+}
+
+
+.socialContainer{
+  width: 100%;
+//   height: 100vh;
+  position: relative;
+}
+
+.place {
+    position: relative;
+    cursor: pointer;
+    min-width: 460px;
+    margin:100px;
+    * {
+        @include transition(.3s);
+    }
+    &.none {
+        visibility: hidden;
+    }
+    &:after {
+        content: '';
+        height:300px;
+        position:absolute;
+        display:block;
+        bottom: 0px;
+        left:0px;
+        right:0px;
+        z-index:1;
+        background: linear-gradient(180deg, rgba(13,25,28,0) 0%, rgba(13,25,28,0.02) 0.86%, rgba(13,25,28,0.05) 3.34%, rgba(13,25,28,0.12) 7.26%, rgba(13,25,28,0.2) 12.48%, rgba(13,25,28,0.29) 18.82%, rgba(13,25,28,0.39) 26.13%, rgba(13,25,28,0.5) 34.25%, rgba(13,25,28,0.61) 43.01%, rgba(13,25,28,0.71) 52.25%, rgba(13,25,28,0.8) 61.81%, rgba(13,25,28,0.88) 71.52%, rgba(13,25,28,0.95) 81.24%, rgba(13,25,28,0.98) 90.78%, #0D191C 100%);
+    }
+    h3 {
+        color:$white;
+        position: absolute;
+        bottom:20px;
+        left:-80px;
+        z-index:2;
+    }
+    span {
+        color: $yellow;
+        position: absolute;
+        font-size: 15px;
+        font-weight: bold;
+        bottom:100px;
+        left:-80px;
+        z-index:2;
+    }
+    .place-img {
+        overflow: hidden;
+    }
+    
+    .hover-text {
+        opacity: 0;
+        position: absolute;
+        z-index: 2;
+        top:180px;
+        left:80px;
+        color:$white;
+        padding-right:20px;
+
+        p {
+            font-size:16px;
+            margin:0;
+            padding:0;
+        }
+        .yellow {
+            color:$yellow;
+            letter-spacing: 2px;
+            font-weight: 600;
+            text-transform: uppercase;
+            margin-top:20px;
+        }
+    }
+
+    &:hover {
+        &:after {
+            height:100%;
+        }
+        img {
+            filter: blur(3px) grayscale(100%);
+           
+        }
+        h3 {
+
+            bottom:75%;
+        }
+        span {
+
+            bottom:70%;
+        }
+        .hover-text {
+            opacity: 1;
+            top:150px;
+        }
+    }
+    
+}
+.t-group {
+    color:$white;
+    position: absolute;
+    z-index:2;
+    font-size: 80px;
+    top:35%;
+    left:60px;
+    line-height: 1;
+}
+
+.bg-map {
+    position:absolute;
+    z-index: -1;
+}
+
+.bg-white {
+    background:$white;
+    color:$black;
+    padding:80px 0;
+    
+    h2 {
+        font-size: 75px;
+        letter-spacing: 0;
+        line-height: 90px;
+        display: block;
+        margin: 20px auto;
+        max-width: 830px;
+    }
+    .lrg{
+        font-size: 22px;
+        letter-spacing: 0.43px;
+        line-height: 36px;
+        font-weight: 300;
+    }
+    .up {
+        position: relative;
+        top:80px;
+    }
+}
+
+.ceo {
+    background:#eee;
+    position: relative;
+    margin-top:300px;
+    left:-25px;
     &:before {
         content: '';
-        background: url('/wp-content/themes/salient-child/src/img/Play_button.svg');
         position: absolute;
-        left:-70px;
-        top:-70px;
-        width:130px;
-        height:130px;
-        display:block;
-    }
-    &:hover:before {
         top:0;
+        left:-200px;
+        height:100%;
+        width:200px;
+        display: block;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-image:url('https://travelforyouth.redolive.co/wp-content/uploads/2021/10/founders_quote.jpg');
+    }
+
+    .quote {
+        padding:30px 30px 30px 100px;
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            left:10px;
+            top:40px;
+            height: 45px;
+            width:54px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-image:url('https://travelforyouth.redolive.co/wp-content/uploads/2021/10/Quotes.png');
+        }
+    }
+    p {
+        font-size: 22px;
+        letter-spacing: 0.43px;
+        line-height: 36px;
+        font-weight: 500;
+        .author {
+            color:#8290A0;
+            display:block;
+        }
     }
 }
 
+.testimonial {
+    padding:200px 0;
+    
+    h2 {
+        text-align: center;
+        position: relative;
+        top:300px;
+    }
+    p {
+        font-size: 24px;
+        letter-spacing: 0.47px;
+        line-height: 36px;
+        .author {
+            line-height: 100px;
+            display:block;
+            margin-top:30px;
+        }
+    }
+    .textimonial {
+        padding-left:80px;
+        padding-right:40px;
+        margin-top:400px;
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            left:0px;
+            top:8px;
+            height: 45px;
+            width:54px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-image:url('https://travelforyouth.redolive.co/wp-content/uploads/2021/10/Quotes.png');
+        }
+    }
+    .down {
+        padding-top:120px;
+    }
 
-.gallery {
-	position: absolute;
-	width: 100%;
-	height: 100vh;
-	overflow: hidden;
+}
+.circle {
+    border-radius:100%;
+    height:80px;
+    width:80px !important;
+    display:block;
+    float:left;
+    margin-right:20px;
 }
 
-.cards {
-	position: absolute;
-	width: 14rem;
-	height: 18rem;
-	top: 40%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+.owl-nav {
+    float: right;
+    padding-right:30%;
+    margin-top:-60px;
+}
+.owl-prev i{
+    display:inline-block;
+    height:60px;
+    width:60px;
+    border-radius:100%;
+    border:2px solid $black;
+    line-height:55px;
+    font-size: 30px;
+    margin-right:30px;
+    &:hover {
+        background:$yellow;
+    }
+}
+.owl-next i{
+    display:inline-block;
+    height:60px;
+    width:60px;
+    border-radius:100%;
+    border:2px solid $black;
+    line-height:55px;
+    font-size: 30px;
+    &:hover {
+        background:$yellow;
+    }
 }
 
-.cards li {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	width: 14rem;
-	height: 18rem;
-	text-align: center;
-	line-height: 18rem;
-	font-size: 2rem;
-	font-family: sans-serif;
-	background-color: #9d7cce;
-	position: absolute;
-	top: 0;
-	left: 0;
-	border-radius: 0.8rem;
+.instagram-area {
+    background:#eee;
+
+    .h2 {
+        color:$black;
+        text-align:center;
+        position: relative;
+        top:-110px;
+        span {
+            padding-bottom:40px;
+        }
+        span b {
+            color:$black;
+        }
+    }
 }
 
-.actions {
-	position: absolute;
-	bottom: 25px;
-	left: 50%;
-	transform: translateX(-50%);
-}
