--- a/wp-content/themes/salient-child/src/_defaultset.scss
+++ b/wp-content/themes/salient-child/src/_defaultset.scss
@@ -100,8 +100,20 @@ $black: #0D191C;
 body {
     font-family: $font;
 }
+.ocm-effect-wrap, .ocm-effect-wrap-inner {
+    background:$black;
+}
 h1,h2,h3,h4,h5,h6, p, a {
     font-family: $font;
+}
+.hide {
+    display:none;
+}
+header nav, .mobile-icon {
+    display: none !important;
+}
+#header-outer {
+    box-shadow: none !important;
 }
 .wrap {
     max-width: 1400px;
@@ -122,6 +134,25 @@ h1,h2,h3,h4,h5,h6, p, a {
     font-weight: 500;
     font-size: 75px;
     line-height: 1.3;
+    span {
+        font-size: 15px;
+        letter-spacing: 4.25px;
+        line-height: 18px;
+        color:$yellow;
+        display: block;
+        b {
+            color:$white;
+        }
+    }
+    @include sm-down {
+
+       font-size: 50px;
+       line-height: 1;
+       span {
+            margin-bottom:20px;
+        }
+        
+    }
 }
 
 img {
