--- a/wp-content/themes/salient-child/src/_hero.scss
+++ b/wp-content/themes/salient-child/src/_hero.scss
@@ -106,7 +106,6 @@
     color:$white;
     border-radius: 30px;
     padding:15px 12px;
-    cursor: url('https://travelforyouth.redolive.co/wp-content/uploads/2021/10/coming-soon-cursor.png'), pointer !important;
     @include sm {
         padding:15px 30px;
     }
@@ -438,6 +437,9 @@
             position: relative;
             top:80px;
         }
+    }
+    .ro-button {
+        color:$black;
     }
 }
 
